; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_ctr.c_frontend_ctr_set_fork.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_ctr.c_frontend_ctr_set_fork.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"FRONTEND_FORK_CORE\0A\00", align 1
@ctr_fork_mode = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"FRONTEND_FORK_CORE_WITH_ARGS\0A\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"FRONTEND_FORK_RESTART\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @frontend_ctr_set_fork to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @frontend_ctr_set_fork(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %14 [
    i32 131, label %5
    i32 130, label %8
    i32 128, label %11
    i32 129, label %13
  ]

5:                                                ; preds = %1
  %6 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* %3, align 4
  store i32 %7, i32* @ctr_fork_mode, align 4
  br label %15

8:                                                ; preds = %1
  %9 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i32, i32* %3, align 4
  store i32 %10, i32* @ctr_fork_mode, align 4
  br label %15

11:                                               ; preds = %1
  %12 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  store i32 131, i32* @ctr_fork_mode, align 4
  br label %15

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %1, %13
  store i32 0, i32* %2, align 4
  br label %16

15:                                               ; preds = %11, %8, %5
  store i32 1, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %14
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @RARCH_LOG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
